--- a/index.html
+++ b/index.html
@@ -59,5 +59,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- ✅ Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "YOUR_SITE_TOKEN"}'>
+    </script>
   </body>
 </html>
