--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <script
       defer
       src="https://static.cloudflareinsights.com/beacon.min.js"
-      data-cf-beacon='{"token": "YOUR_SITE_TOKEN"}'>
+      data-cf-beacon='{"token": "14780348d7b14598a2b297270f162a91"}'>
     </script>
   </body>
 </html>
